tests/baselines/reference/unicodeExtendedEscapesInStrings21(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
unicodeExtendedEscapesInStrings21.ts(1,15): error TS1199: Unterminated Unicode escape sequence.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== unicodeExtendedEscapesInStrings21.ts (1 errors) ====
    var x = "\u{67";
                  
!!! error TS1199: Unterminated Unicode escape sequence.
    